# translation-finder

./: .bettercodehub.yml  .deepsource.toml  .drone.yml  .gitignore  .pre-commit-config.yaml  .scrutinizer.yml  .stickler.yml  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  appveyor.yml  codecov.yml  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  weblate-discovery
.github/: main.workflow  renovate.json
.github/workflows/: closing.yml  codeql-analysis.yml  mypy.yml  setup.yml  test.yml  workflow.yml
.reuse/: dep5
scripts/: create-release  generate-language-data
translation_finder/: __init__.py  api.py  chardet.py  countries.py  data.py  discovery.py  finder.py  languages.py  test_api.py  test_chardet.py  test_discovery.py  test_finder.py  test_fuzz.py  test_results.py
translation_finder/discovery/: __init__.py  base.py  files.py  result.py  transifex.py
translation_finder/test_data/: calibre.txt  catalysm.txt  linked
translation_finder/test_data/.tx/: config
translation_finder/test_data/catkeys/: cs.catkeys  en.catkeys
translation_finder/test_data/dtd/: cs.dtd  en.dtd
translation_finder/test_data/invalid/.tx/: config
translation_finder/test_data/java/: iso_cs.properties  utf-16.properties  utf-16_cs.properties  utf-8.properties  utf-8_cs.properties
translation_finder/test_data/json/: bi-cs.json  flat-en.json  go-cs.json  go-en.json  go-i18n-v2-en.json  gotext-en.json  i18nextv4-en.json  nested-en.json  nextcloud-en.json  resjson-en.json  webext-en.json
translation_finder/test_data/lang/: cs.lang  en.lang
translation_finder/test_data/php/: en.php
translation_finder/test_data/toml/: corrupted.toml  go-i18n-cs.toml  go-i18n-en.toml  regular-en.toml
translation_finder/test_data/windows_paths/.tx/: config
translation_finder/test_data/xliff/: en.xlf
translation_finder/test_data/xliff2/: cs.xliff  de-placeables.xliff
translation_finder/test_data/yaml/: en.yml
translation_finder/test_data/yaml/cs/: cs.yml
translation_finder/test_data/yaml/en/: en.yml  nomatch.yml
