[metadata]
name = translation-finder
version = 2.3
description = A translation file finder used in Weblate.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://weblate.org/
author = Michal Čihař
author_email = michal@cihar.com
license = GPL-3.0-or-later
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Localization
    Topic :: Utilities
download_url = https://github.com/WeblateOrg/translation-finder
keywords = i18n l10n gettext translate
project_urls =
    Issue Tracker=https://github.com/WeblateOrg/translation-finder/issues
    Documentation=https://docs.weblate.org/
    Source Code=https://github.com/WeblateOrg/translation-finder
    Twitter=https://twitter.com/WeblateOrg

[options]
packages = translation_finder
python_requires = >=3.6
package_dir = wlc=wlc

[options.entry_points]
console_scripts =
    weblate-discover = translation_finder.api:cli

[flake8]
max-complexity = 16
select = E,W1,W2,W3,W504,W505,W6
enable-extensions = B,C,D,F,G,I,M,N,R,SF
# Should be fixed:
#  D10 - we are missing many docstrings
#  D20* - wrong docstring formatting
#  D40* - many strings need rephrasing
# False positives:
#  R504 - see https://github.com/Afonasev/flake8-return/issues/3
#  E203 - see https://github.com/python/black/issues/544
ignore = R504,D10,D200,D202,D204,D205,D209,D401,E203
exclude = migrations,settings.py,settings_test.py,.git,data,data-test,settings_test_nose.py,docs,.venv,build,node_modules,.eggs
max-line-length = 88

[pycodestyle]
select = E,W1,W2,W3,W504,W505,W6
exclude = migrations,settings.py,settings_test.py,.git,data,data-test,settings_test_nose.py,docs,.venv,build,node_modules,.eggs
max-line-length = 88

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
known_third_party = weblate_language_data,charamel,ruamel
